添加模拟器唯一标识码和模拟器类型字段
